# CLAUDIO

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py  setup2.py
benchmark_datasets/: unique_links_withpeptides_submit.csv
claudio/: claudio.py  claudio_m.py
claudio/data/: constants.py
claudio/module01/: README.md
claudio/module01/src/: main.py
claudio/module01/src/algorithm/: check_data.py  create_unique_list.py  uniprot_search.py
claudio/module01/src/io/: read_in.py  read_temp.py  write_out.py
claudio/module02/: README.md  run_module02_intra.py
claudio/module02/src04_read_out/: main.py
claudio/module02/src_distance_reevaluation/: main.py
claudio/module02/src_distance_reevaluation/algorithm/: calc_site_distances.py  create_plots.py  search_pdb_pos.py
claudio/module02/src_distance_reevaluation/io/: read_uniprot_search_out.py  write_out.py
claudio/module02/src_structure_search/: main.py
claudio/module02/src_structure_search/algorithm/: chain_copies.py  download_db.py  pdb_download.py  structure_search.py
claudio/module02/src_structure_search/io/: read_input.py  read_temp.py  write_out.py
claudio/module03/: README.md
claudio/module03/src/: main.py
claudio/module04/: README.md
claudio/module04/src/: main.py
claudio/utils/: db_updater.py  download_db.py  download_pdb.py  utils.py
config/: benchmark_config.txt  config_description.txt
test/: benchmark_data.csv
test/unittests/: test_M1.py  test_M2_distance_reevaluation.py  test_M2_structure_search.py  test_M3.py  test_M4.py  test_utils.py
(+11 files in other folders)
