[tool.poetry]
name = "CLAUDIO"
version = "2.0.0"
description = "Structural analysis, mapping, validation, visualization, and modeling of protein cross-links on protein and protein-protein interaction."
authors = ["Alexander Röhl <alexander.roehl@uni-tuebingen.de>", "Tobias Löser <tobias.loeser@student.uni-tuebingen.de>"]
readme = "README.md"
packages = [{ include = "claudio" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
biopython = "1.79"
click = "8.1.3"
matplotlib = "3.6.3"
pandas = "1.5.3"
requests = "2.28.2"
numpy = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
